# duckup

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: build-duckup.yml
src/: main.rs
