[package]
name = "duckup"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
directories = "5.0"
colored = "2.0"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
tempfile = "3"
